# illegal_racer

./: .gitmodules  settings.gradle
app/: build.gradle
app/src/androidTest/java/ru/killthereal/illegal_racer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  LogHelper.h  native-lib.cpp  native-lib.h
app/src/main/cpp/controls/: Camera.cpp  Camera.h  Touches.cpp  Touches.h
app/src/main/cpp/graphics/: MyRenderer.cpp  MyRenderer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
app/src/main/cpp/graphics/base_renderer/: Renderer.cpp  Renderer.h
app/src/main/cpp/graphics/drawable/: Rectangle.cpp  Rectangle.h  Triangle.cpp  Triangle.h
app/src/main/cpp/graphics/loaders/: Loaders.cpp  Loaders.h
app/src/main/cpp/graphics/render/: MyRenderer.cpp  MyRenderer.h  Renderer.cpp  Renderer.h
app/src/main/java/ru/killthereal/illegal_racer/: CustomSurfaceView.kt  MainActivity.kt
app/src/main/java/ru/killthereal/illegal_racer/graphics/: MyOpenGLSurfaceView.kt  RenderWrapper.kt  Renderer.kt  Shader.kt  ShaderMaker.kt
app/src/main/java/ru/killthereal/illegal_racer/graphics/drawable/: Triangle.kt
app/src/main/java/ru/killthereal/illegal_racer/render/: GLESRenderer.kt  MyOpenGLSurfaceView.kt  Renderer.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/raw/: fragment_shader.fsh  vertex.vsh
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/ru/killthereal/illegal_racer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
